--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Psychologie Blog</title>
+    <title>Laat een bericht achter - Psychologie Blog</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,16 +17,16 @@
         </nav>
     </header>
 
-    <main>
-        <section id="artikelen-container" class="homepage-artikelen">
-            <!-- Artikelen worden hier geladen via script.js -->
-        </section>
-    </main>
+    <main class="blog-form">
+        <h2>Laat een bericht achter</h2>
+        <p>We horen graag je gedachten of tips!</p>
+
+        <!-- Google Form iframe -->
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfD8.../viewform?embedded=true" width="640" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
 
     <footer>
         <p>© 2025 Psychologie Blog | Volg ons op sociale media</p>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
