--- a/over.html
+++ b/over.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Over mij - Mijn Blog</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Over mij - Psychologie Blog</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-<h1>Over mij</h1>
-<nav>
-<ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="artikelen.html">Artikelen</a></li>
-<li><a href="over.html">Over mij</a></li>
-</ul>
-</nav>
-</header>
-<main>
-<section>
-<p>Welkom! Mijn naam is [Jouw Naam] en dit is mijn blog over psychologie, filosofie en mindfulness. Hier deel ik inzichten, artikelen en tips om bewuster te leven en te reflecteren op het dagelijks leven.</p>
-<p>Je vindt hier artikelen over persoonlijke ontwikkeling, stressvermindering, filosofische denkwijzen en meditatie.</p>
-</section>
-</main>
-<footer>
-<p>&copy; 2025 Mijn Blog. Alle rechten voorbehouden.</p>
-</footer>
+    <header>
+        <h1>Psychologie & Mindfulness Blog</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="artikelen.html">Artikelen</a>
+            <a href="over.html">Over mij</a>
+            <a href="blog.html">Schrijf mee</a>
+        </nav>
+    </header>
+
+    <main class="over-mij">
+        <img src="https://images.unsplash.com/photo-1594737625785-1fc3134cf0b1?auto=format&fit=crop&w=400&q=80" alt="Over mij" class="over-foto">
+        <h2>Welkom!</h2>
+        <p>Hallo! Ik ben de auteur van deze blog over psychologie, filosofie en mindfulness. Ik deel artikelen om je te helpen bewust te leven, stress te verminderen en meer geluk te ervaren.</p>
+        <p>Volg mijn blog voor nieuwe inzichten en praktische tips!</p>
+    </main>
+
+    <footer>
+        <p>© 2025 Psychologie Blog | Volg ons op sociale media</p>
+    </footer>
 </body>
 </html>
+
